--- a/siteFlix/index.html
+++ b/siteFlix/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="img" href="/LuFlix.png" />
+    <link rel="icon" type="img" href="/LunFlix.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LuFlix</title>
   </head>
